updated - with some changes (comments from Dr Wong)

--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -2,7 +2,7 @@
 %This is the draft literature review. 
 
 %!TEX ROOT = thesis.tex
-\chapter{Literature Review}
+\chapter{Background Studies}
 \label{section:litreview}
 \section{First Test and I need a really long title, please do oblige me won't you? Just a few more words and yes we're there}
 
