--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,21 @@
 
-The use of video data as a means of surveillance is no longer a new idea. Thousands, if not millions of video footage are recorded by the second. However, there has not been much post-processing done to these semantic rich source of data. In this work, carpark surveillance video data which is rich with semantics is tapped into so as to extract useful data for analytic purposes. Example of such semantics includes vehicle color, trajectories, travelled speed, weather information, types of vehicles and the such. In this work, a vehicle detection and tracking algorithm was adopted and used in conjunction with the proposed large scale semantics extraction module to extract color and motion information from a month's worth of data. 
+The use of video data as a means of surveillance is no longer a new idea. It is no secret that video data could potentially provide invaluable information when dealing with analytic, surveillance or security matters. Millions, if not trillions of video footage are recorded by the second. While there has been various works on extraction of human behaviours in a general surveillance setting especially over the recent years, not much work has focused on carpark surveillance scenario. The abundance of raw video data calls for an efficient way of dissecting these raw data while extracting useful information which are easily interpretable, and at the same time, enabling the ease of fetching these information as and when it is required. 
 
-Subsequently, a semantic retrieval module is proposed and used to search for all relevant video shots based on a given semantic query. This is a challenging task as outdoor scenarios are often non-ideal due to its ever-changing illumination and weather conditions which would directly affect the accuracy of the colors of the vehicles. To address these challenges, we subdivided the source video data into smaller chunks by introducing spatio-temporal cubes or \emph{atoms}, which is used to store and retrieve these semantics at ease. The proposed method was tested on a month of continuous data from an outdoor carpark under various lighting and weather conditions. 
+The contribution of this work is twofold. First, a framework for the extraction of color, motion, timestamp, and size information from the video is proposed. 
+%In order to extract the color information from the vehicles, 
+The proposed method employs an algorithm that averages out the dominant color over the course of tracking it and ranking it against different hues. 
+%This is a challenging task as outdoor scenarios are often non-ideal due to its ever-changing illumination and weather conditions which would directly affect the accuracy of the colors of the vehicles. 
+As for the motion of the vehicles, the proposed method compiles the relative position/location of each vehicles into trajectory sets. In this work, the timestamp information as well as the object size along with the object types were also extracted. A spatio-temporal cube design was adopted to uniquely identify each video footage so that the extracted information can be stored while maintaining the ability to identify them.  
 
-The Recall@k along with the normalized Discounted Cumulative Gain (nDCG) metric was used to measure the overall performance of the proposed retrieval engine. Along with that, the performance of the proposed method was also measured in terms of retrieval speed. From the experimental evaluations, the results shows promising results for the retrieval module in terms of precision, ranking of results as well as retrieval time. As such, the retrieval module could benefit the deep learning research field when used as a semi-supervised ground truth annotation tool.
+Next, the second contribution of this work is the construction of a retrieval engine which is used to retrieve video shots based on the given semantics which were extracted. This work proposed an unconventional yet intuitive trajectory input in the form of user-described trajectory drawn on the search canvas. 
+The other semantics (color \& timestamp information) were given as keyword-based inputs for the proposed method to locate and rank video shots based on its similarity. 
+%As with any large scale retrieval engine, collecting all the ground truth data is not a viable option. Therefore, 
+The proposed method is then tested against semantics extracted from a month's worth of data 
+%under various lighting and weather conditions 
+using the average Precision@K and the normalized Discounted Cumulative Gain (nDCG) metrics. The proposed method managed to achieved the best precision score of 86\%. Likewise for the vehicle colors, the best precision achieved was recorded at 91\%. The average nDCG results scored around the 83\% region for both trajectories and color results. 
+%As a whole, the proposed method shows promising results as it is fairly accurate, fast, and robust under various test scenarios.
+
+This thesis highlights an overall framework of automating and translating existing raw video data into sets of intuitive and useful semantics which can be queried from. Contrary to traditional approach which are labour intensive and time consuming, the proposed method effectively saves time, reduces the cost of manual extraction when retrieving desired video shots accurately, fast and robust under various test scenarios. As the proposed retrieval method utilizes point-based data, this algorithms used in this work can also be extended to datasets of similar nature.
 
 
 %\keywords{Vehicle Semantic Extraction, Retrieval Systems, Carpark Surveillance}
