--- a/thesis.tex
+++ b/thesis.tex
@@ -48,8 +48,11 @@ breaklines=true,breakatwhitespace=true}
 
 
 \newcommand*\mean[1]{\bar{#1}}
-\newcommand{\versionOne}{LSH-Inspired Semantic Extraction and Retrieval Engine (Version 1) }
-\newcommand{\versionTwo}{Chamfer Distance based Semantic Extraction and Retrieval Engine (Version 2) }
+\newcommand{\versionOneExt}{LSH-Inspired Semantic Extraction }
+\newcommand{\versionTwoExt}{Chamfer Distance based Semantic Extraction }
+
+\newcommand{\versionOneRet}{LSH-Inspired Retrieval Engine }
+\newcommand{\versionTwoRet}{Chamfer Distance based Retrieval Engine  }
 
 
 
